--- a/Docs/Home.css
+++ b/Docs/Home.css
@@ -472,11 +472,12 @@
 }
 
 .u-section-8 .u-layout-wrap-1 {
-  margin: 30px auto 60px 0;
+  margin-top: 31px;
+  margin-bottom: 60px;
 }
 
 .u-section-8 .u-layout-cell-1 {
-  min-height: 434px;
+  min-height: 415px;
   --radius: 50px;
 }
 
@@ -505,7 +506,7 @@
 }
 
 .u-section-8 .u-layout-cell-2 {
-  min-height: 405px;
+  min-height: 415px;
   --radius: 50px;
 }
 
@@ -542,17 +543,12 @@
     width: 682px;
   }
 
-  .u-section-8 .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
   .u-section-8 .u-layout-cell-1 {
-    min-height: 358px;
+    min-height: 342px;
   }
 
   .u-section-8 .u-layout-cell-2 {
-    min-height: 334px;
+    min-height: 342px;
   }
 
   .u-section-8 .u-text-6 {
