--- a/Docs/Home.css
+++ b/Docs/Home.css
@@ -768,4 +768,100 @@
 
 .u-section-11 .u-sheet-1 {
   min-height: 10px;
+} .u-section-12 {
+  background-image: none;
+}
+
+.u-section-12 .u-sheet-1 {
+  min-height: 257px;
+}
+
+.u-section-12 .u-text-1 {
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  font-size: 4.5rem;
+  font-weight: 900;
+  margin: 32px 0 0;
+}
+
+.u-section-12 .u-social-icons-1 {
+  white-space: nowrap;
+  height: 77px;
+  min-height: 16px;
+  width: 465px;
+  min-width: 160px;
+  box-shadow: 2px 0 0 0 rgba(0,0,0,0);
+  margin: 15px auto 0;
+}
+
+.u-section-12 .u-icon-1 {
+  height: 77px;
+}
+
+.u-section-12 .u-icon-2 {
+  height: 77px;
+  color: rgb(57, 89, 118) !important;
+}
+
+.u-section-12 .u-icon-3 {
+  height: 77px;
+}
+
+.u-section-12 .u-icon-4 {
+  height: 77px;
+}
+
+.u-section-12 .u-icon-5 {
+  height: 77px;
+}
+
+.u-section-12 .u-line-1 {
+  width: 100px;
+  height: 10px;
+  margin: 13px auto 32px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-12 .u-sheet-1 {
+    min-height: 339px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-12 .u-sheet-1 {
+    min-height: 260px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-12 .u-sheet-1 {
+    min-height: 195px;
+  }
+
+  .u-section-12 .u-text-1 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-12 .u-sheet-1 {
+    min-height: 367px;
+  }
+
+  .u-section-12 .u-text-1 {
+    font-size: 2.25rem;
+    width: 340px;
+    margin-top: 75px;
+  }
+
+  .u-section-12 .u-social-icons-1 {
+    margin-top: 30px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-12 .u-line-1 {
+    margin-top: 28px;
+    margin-bottom: 60px;
+  }
 }
